--- a/training/pyspark/practice_problems/py_spark_problems.ipynb
+++ b/training/pyspark/practice_problems/py_spark_problems.ipynb
@@ -2,37 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 33,
    "id": "d0f2c3b8-3c28-441f-873d-ed019111f977",
    "metadata": {},
    "outputs": [],
    "source": [
     "from pyspark.sql import SparkSession, Window\n",
     "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, BooleanType, TimestampType, DateType, FloatType\n",
-    "from pyspark.sql.functions import sum, col, count, when, lead, collect_list, upper, lower,\\\n",
+    "from pyspark.sql.functions import sum, col, count, when, lead, collect_list, upper, lower, countDistinct, \\\n",
     "    length, year, countDistinct, round, first, lit, dense_rank, substring, udf, broadcast, skewness, sort_array, concat_ws\n",
-    "from datetime import datetime"
+    "from datetime import datetime, date, timedelta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import findspark\n",
+    "findspark.init()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "4dc3c92b-eb15-49f9-8b16-3e3939c81c12",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "your 131072x1 screen size is bogus. expect trouble\n",
-      "23/10/01 00:00:24 WARN Utils: Your hostname, Pramod resolves to a loopback address: 127.0.1.1; using 172.23.91.132 instead (on interface eth0)\n",
-      "23/10/01 00:00:24 WARN Utils: Set SPARK_LOCAL_IP if you need to bind to another address\n",
-      "Setting default log level to \"WARN\".\n",
-      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "23/10/01 00:00:34 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "spark = SparkSession.builder.master(\n",
     "    'local[*]').appName('PysparkDataPipeline').getOrCreate()"
@@ -73,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "cbb01bdc-c8b3-498d-8a14-4d061a3c1bd1",
    "metadata": {},
    "outputs": [],
@@ -84,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "5ff5845b-115b-4fd1-9f6e-6e6f69974f07",
    "metadata": {},
    "outputs": [],
@@ -94,17 +91,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "d6481333-129d-4bd0-971f-c8689be62dba",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -3097,7 +3087,8 @@
     }
    ],
    "source": [
-    "cinema_df.filter((col('description') != 'boring') & (col('id') % 2 == 1)).orderBy(col('rating').desc()).show()"
+    "cinema_df.filter((col('description') != 'boring') & (\n",
+    "    col('id') % 2 == 1)).orderBy(col('rating').desc()).show()"
    ]
   },
   {
@@ -3111,12 +3102,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "id": "f80c8d0c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "activities_schema = StructType([StructField('sell_date', StringType(), False), \n",
+    "activities_schema = StructType([StructField('sell_date', StringType(), False),\n",
     "                                StructField('product', StringType(), True)])\n",
     "activities_df = spark.createDataFrame([['2020-05-30', 'Headphone'],\n",
     "                                       ['2020-06-01', 'Pencil'],\n",
@@ -3129,17 +3120,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "id": "22e0b848",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -3165,7 +3149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "id": "41f6d5d0",
    "metadata": {},
    "outputs": [
@@ -3214,9 +3198,121 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6a2cf5d5",
+   "metadata": {},
+   "source": [
+    "#### 1141. User Activity for the Past 30 Days I"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "schema = StructType([StructField('user_id', IntegerType(), False),\n",
+    "                    StructField('session_id', IntegerType(), False),\n",
+    "                    StructField('activity_date', StringType(), False),\n",
+    "                    StructField('activity_type', StringType(), False)])\n",
+    "df = spark.createDataFrame([[1, 1, '2019-07-20', 'open_session'],\n",
+    "                            [1, 1, '2019-07-20', 'scroll_down'],\n",
+    "                            [1, 1, '2019-07-20', 'end_session'],\n",
+    "                            [2, 4, '2019-07-20', 'open_session'],\n",
+    "                            [2, 4, '2019-07-21', 'send_message'],\n",
+    "                            [2, 4, '2019-07-21', 'end_session'],\n",
+    "                            [3, 2, '2019-07-21', 'open_session'],\n",
+    "                            [3, 2, '2019-07-21', 'send_message'],\n",
+    "                            [3, 2, '2019-07-21', 'end_session'],\n",
+    "                            [4, 3, '2019-06-25', 'open_session'],\n",
+    "                            [4, 3, '2019-06-25', 'end_session']], schema=schema).select('user_id', 'session_id', col('activity_date').cast('date'), 'activity_type')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "root\n",
+      " |-- user_id: integer (nullable = false)\n",
+      " |-- session_id: integer (nullable = false)\n",
+      " |-- activity_date: date (nullable = true)\n",
+      " |-- activity_type: string (nullable = false)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------+----------+-------------+-------------+\n",
+      "|user_id|session_id|activity_date|activity_type|\n",
+      "+-------+----------+-------------+-------------+\n",
+      "|      1|         1|   2019-07-20| open_session|\n",
+      "|      1|         1|   2019-07-20|  scroll_down|\n",
+      "|      1|         1|   2019-07-20|  end_session|\n",
+      "|      2|         4|   2019-07-20| open_session|\n",
+      "|      2|         4|   2019-07-21| send_message|\n",
+      "|      2|         4|   2019-07-21|  end_session|\n",
+      "|      3|         2|   2019-07-21| open_session|\n",
+      "|      3|         2|   2019-07-21| send_message|\n",
+      "|      3|         2|   2019-07-21|  end_session|\n",
+      "|      4|         3|   2019-06-25| open_session|\n",
+      "|      4|         3|   2019-06-25|  end_session|\n",
+      "+-------+----------+-------------+-------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------+------------+\n",
+      "|       day|active_users|\n",
+      "+----------+------------+\n",
+      "|2019-07-21|           2|\n",
+      "|2019-07-20|           2|\n",
+      "+----------+------------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.filter((col('activity_date') <= '2019-07-27')\n",
+    "          & (col('activity_date') > date(2019, 7, 27) - timedelta(30)))\\\n",
+    "    .groupBy('activity_date').agg(countDistinct('user_id'))\\\n",
+    "    .withColumnRenamed('activity_date', 'day')\\\n",
+    "    .withColumnRenamed('count(DISTINCT user_id)', 'active_users')\\\n",
+    "    .show()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a2cf5d5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3238,7 +3334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
